Functional Build .apk
Need to fix overlapping enemies
Also maybe make icons bigger and more readable.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,13 +115,8 @@ LastLevel=/Game/Levels/MainMenu
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainMenu.BPW_MainMenu
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_ConfirmationScreen.BPW_ConfirmationScreen
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Credits.BPW_Credits
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameOver.BPW_GameOver
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Leaderboard.BPW_Leaderboard
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_SwitcherBox.BP_SwitcherBox
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2763,6 +2758,60 @@ BPW_Leaderboard_C.Behavior=True
 BPW_Leaderboard_C.Render Transform=True
 BPW_Leaderboard_C.Clipping=True
 BPW_Leaderboard_C.Navigation=True
+REINST_BP_EnemyDefault_C_198.Variable=True
+REINST_BP_EnemyDefault_C_198.Sockets=True
+REINST_BP_EnemyDefault_C_198.Character Movement (General Settings)=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Walking=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Jumping / Falling=True
+REINST_BP_EnemyDefault_C_198.Character Movement (Networking)=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Swimming=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Flying=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Custom Movement=True
+REINST_BP_EnemyDefault_C_198.Character Movement (Rotation Settings)=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Physics Interaction=True
+REINST_BP_EnemyDefault_C_198.Character Movement=True
+REINST_BP_EnemyDefault_C_198.Character Movement: Avoidance=True
+REINST_BP_EnemyDefault_C_198.RootMotion=True
+REINST_BP_EnemyDefault_C_198.Character Movement: NavMesh Movement=True
+REINST_BP_EnemyDefault_C_198.NavMovement=True
+REINST_BP_EnemyDefault_C_198.Velocity=True
+REINST_BP_EnemyDefault_C_198.PlanarMovement=True
+REINST_BP_EnemyDefault_C_198.MovementComponent=True
+REINST_BP_EnemyDefault_C_198.Tags=True
+REINST_BP_EnemyDefault_C_198.ComponentReplication=True
+REINST_BP_EnemyDefault_C_198.Activation=True
+REINST_BP_EnemyDefault_C_198.Cooking=True
+REINST_BP_EnemyDefault_C_198.Events=True
+REINST_BP_EnemyDefault_C_220.Variable=True
+REINST_BP_EnemyDefault_C_220.Sockets=True
+REINST_BP_EnemyDefault_C_220.Character Movement (General Settings)=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Walking=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Jumping / Falling=True
+REINST_BP_EnemyDefault_C_220.Character Movement (Networking)=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Swimming=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Flying=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Custom Movement=True
+REINST_BP_EnemyDefault_C_220.Character Movement (Rotation Settings)=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Physics Interaction=True
+REINST_BP_EnemyDefault_C_220.Character Movement=True
+REINST_BP_EnemyDefault_C_220.Character Movement: Avoidance=True
+REINST_BP_EnemyDefault_C_220.RootMotion=True
+REINST_BP_EnemyDefault_C_220.Character Movement: NavMesh Movement=True
+REINST_BP_EnemyDefault_C_220.NavMovement=True
+REINST_BP_EnemyDefault_C_220.Velocity=True
+REINST_BP_EnemyDefault_C_220.PlanarMovement=True
+REINST_BP_EnemyDefault_C_220.MovementComponent=True
+REINST_BP_EnemyDefault_C_220.Tags=True
+REINST_BP_EnemyDefault_C_220.ComponentReplication=True
+REINST_BP_EnemyDefault_C_220.Activation=True
+REINST_BP_EnemyDefault_C_220.Cooking=True
+REINST_BP_EnemyDefault_C_220.Events=True
+BP_AIController_C.ComponentTick=True
+BP_AIController_C.Tags=True
+BP_AIController_C.ComponentReplication=True
+BP_AIController_C.Activation=True
+BP_AIController_C.Variable=True
+BP_AIController_C.Cooking=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=64.000
@@ -2793,7 +2842,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2815,7 +2864,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2859,17 +2908,17 @@ REINST_BP_AIController_C_401="\"Object.Controller.Controller"
 BP_SequenceController_C=
 PlayerController=
 BP_EnemyBase_C=
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BP_EnemyBase_C_621="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BoxComponent=
+ShapeComponent=
 Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-BP_EnemyDefault_C=
+BP_EnemyDefault_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BP_EnemyBoss_C=
 BP_EnemyNormal_C=
 REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
@@ -2929,6 +2978,7 @@ BPW_ConfirmationScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render 
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetBarStyle\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 BPW_Credits_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BPW_Leaderboard_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+REINST_BP_EnemyDefault_C_220="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [Directories2]
 UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
@@ -3678,26 +3728,26 @@ BPW_GameOver_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCate
 BPW_Leaderboard_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/BPW_Leaderboard
-MRUItem1=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem2=/Game/Blueprints/Widgets/BPW_GameOver
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Blueprints/Logic/BP_SwitcherBox
-MRUItem5=/Game/Levels/TestMap_01
-MRUItem6=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem7=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem8=/Game/Particles/P_TorchFlames
-MRUItem9=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem10=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem11=/Game/Blueprints/Enemies/BP_EnemyNormalNew
-MRUItem12=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem13=/Game/Blueprints/Widgets/BPW_Credits
-MRUItem14=/Game/Blueprints/Widgets/BPW_ConfirmationScreen
-MRUItem15=/Game/Blueprints/Widgets/BPW_MainSettings
-MRUItem16=/Game/Blueprints/Widgets/BPW_MainMenu
-MRUItem17=/Game/Blueprints/Widgets/BPW_Buttons
-MRUItem18=/Game/Textures/GUI/Test/ButtonWoodBlock
-MRUItem19=/Game/Blueprints/Widgets/BPW_MenuItem
+MRUItem0=/Game/Blueprints/Enemies/BP_AIController
+MRUItem1=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem2=/Game/Blueprints/Logic/BP_SwitcherBox
+MRUItem3=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem4=/Game/Levels/MainMenu
+MRUItem5=/Game/Blueprints/Widgets/BPW_Leaderboard
+MRUItem6=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem7=/Game/Blueprints/Widgets/BPW_GameOver
+MRUItem8=/Game/Levels/TestMap_01
+MRUItem9=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem10=/Game/Particles/P_TorchFlames
+MRUItem11=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem12=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem13=/Game/Blueprints/Enemies/BP_EnemyNormalNew
+MRUItem14=/Game/Blueprints/Widgets/BPW_Credits
+MRUItem15=/Game/Blueprints/Widgets/BPW_ConfirmationScreen
+MRUItem16=/Game/Blueprints/Widgets/BPW_MainSettings
+MRUItem17=/Game/Blueprints/Widgets/BPW_MainMenu
+MRUItem18=/Game/Blueprints/Widgets/BPW_Buttons
+MRUItem19=/Game/Textures/GUI/Test/ButtonWoodBlock
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01.Par_BubblePop_01;
@@ -3819,6 +3869,9 @@ TextBlock.Appearance=True
 TextBlock.Performance=False
 TextBlock.Wrapping=False
 PaperSpriteComponent.Collision=False
+BP_EnemyDefault_C.Character Movement: Avoidance=False
+BP_EnemyDefault_C.Character Movement: NavMesh Movement=False
+Blueprint.ClassOptions=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
