Store front beginning

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,18 +106,20 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/TestMap_01
+MRUItem0=/Game/Levels/TestMap_01
+MRUItem1=/Game/Levels/MainMenu
 
 [EditorStartup]
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyNormal.BP_EnemyNormal
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemySmall.BP_EnemySmall
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MenuItem.BPW_MenuItem
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_ConfirmationScreen.BPW_ConfirmationScreen
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_StoreMenuItem.BPW_StoreMenuItem
+OpenAssetsAtExit=/Game/Blueprints/Themes/BP_ThemeData.BP_ThemeData
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2814,6 +2816,12 @@ BP_AIController_C.Activation=True
 BP_AIController_C.Variable=True
 BP_AIController_C.Cooking=True
 PaperFlipbook.Sprite=True
+BP_ThemeData_C.Tick=True
+BP_ThemeData_C.Default=True
+BP_ThemeData_C.Rendering=True
+BP_ThemeData_C.Replication=True
+BP_ThemeData_C.Input=True
+BP_ThemeData_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=64.000
@@ -2844,7 +2852,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Themes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2866,7 +2874,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2890,13 +2898,13 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperFlipbookComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2910,17 +2918,17 @@ REINST_BP_AIController_C_401="\"Object.Controller.Controller"
 BP_SequenceController_C=
 PlayerController=
 BP_EnemyBase_C=
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BP_EnemyBase_C_621="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-BoxComponent=
-ShapeComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-BP_EnemyDefault_C=
+BP_EnemyDefault_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BP_EnemyBoss_C=
 BP_EnemyNormal_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
@@ -2983,7 +2991,7 @@ BPW_Leaderboard_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transfo
 REINST_BP_EnemyDefault_C_220="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [Directories2]
-UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
+UNR=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
 BRUSH=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBX=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBXAnim=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
@@ -3577,7 +3585,7 @@ BlueprintNativeCodeGen.TimeStamp=2018.10.11-18.46.19
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
 BlueprintCompilerCppBackend.TimeStamp=2018.10.11-18.46.19
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2018.11.02-00.20.11
+HierarchicalLODUtilities.TimeStamp=2019.02.22-20.04.04
 HierarchicalLODUtilities.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2019.03.05-01.37.20
 BlueprintGraph.LastCompileMethod=External
@@ -3728,28 +3736,29 @@ BPW_ConfirmationScreen_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.Defaul
 BPW_Credits_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BPW_GameOver_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BPW_Leaderboard_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_StoreMenuItem_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Particles/P_Stone_Shatter
-MRUItem1=/Game/Particles/P_Gem_Shatter
-MRUItem2=/Game/Materials/Particle_Shards
-MRUItem3=/Game/Materials/Rock_Crumble
-MRUItem4=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem5=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem6=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem7=/Game/2DPlatformingKit/Sprites/Extra/walk
-MRUItem8=/Game/2DPlatformingKit/Sprites/Extra/idle
-MRUItem9=/Game/Blueprints/Enemies/BP_AIController
-MRUItem10=/Game/Blueprints/Logic/BP_SwitcherBox
-MRUItem11=/Game/Levels/MainMenu
-MRUItem12=/Game/Blueprints/Widgets/BPW_Leaderboard
-MRUItem13=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem14=/Game/Blueprints/Widgets/BPW_GameOver
-MRUItem15=/Game/Levels/TestMap_01
-MRUItem16=/Game/Particles/P_TorchFlames
-MRUItem17=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem18=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem19=/Game/Blueprints/Enemies/BP_EnemyNormalNew
+MRUItem0=/Game/Blueprints/Themes/BP_ThemeData
+MRUItem1=/Game/Blueprints/Widgets/BPW_StoreMenuItem
+MRUItem2=/Game/Blueprints/Widgets/BPW_ConfirmationScreen
+MRUItem3=/Game/Blueprints/Widgets/BPW_MenuItem
+MRUItem4=/Game/Blueprints/Widgets/BPW_MainSettings
+MRUItem5=/Game/Particles/P_Stone_Shatter
+MRUItem6=/Game/Particles/P_Gem_Shatter
+MRUItem7=/Game/Materials/Particle_Shards
+MRUItem8=/Game/Materials/Rock_Crumble
+MRUItem9=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem10=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem11=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem12=/Game/2DPlatformingKit/Sprites/Extra/walk
+MRUItem13=/Game/2DPlatformingKit/Sprites/Extra/idle
+MRUItem14=/Game/Blueprints/Enemies/BP_AIController
+MRUItem15=/Game/Blueprints/Logic/BP_SwitcherBox
+MRUItem16=/Game/Levels/MainMenu
+MRUItem17=/Game/Blueprints/Widgets/BPW_Leaderboard
+MRUItem18=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem19=/Game/Blueprints/Widgets/BPW_GameOver
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01.Par_BubblePop_01;
