--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -10,6 +10,7 @@ Paths=../../../Engine/Plugins/Lumin/MagicLeapEmulator/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Enterprise/VariantManagerContent/Content
+Paths=../../../Engine/Plugins/Developer/AnimationSharing/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -32,5 +33,14 @@ AdvancedMode=False
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
+
+[/Script/LuminPlatformEditor.MagicLeapSDKSettings]
+MLSDKPath=(Path="")
 
 
