--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,5 @@
 [URL]
+
 [/Script/Engine.RendererSettings]
 r.MobileHDR=False
 r.Mobile.DisableVertexFog=True
@@ -145,7 +146,7 @@ bBuildForArm64=False
 bBuildForX86=False
 bBuildForX8664=False
 bBuildForES2=True
-bBuildForES31=False
+bBuildForES31=True
 bSupportsVulkan=False
 bBuildWithHiddenSymbolVisibility=False
 bSaveSymbols=False
@@ -243,3 +244,18 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=E32A9606455A297A0A9DD4A9B34F9C0E
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
